[project]
name = "insertokname-authlib"
description = "The ultimate Python library in building OAuth and OpenID Connect servers and clients."
authors = [{ name = "Hsiaoming Yang", email = "me@lepture.com" }]
dependencies = ["cryptography"]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.rst"
